--- a/blackjack.html
+++ b/blackjack.html
@@ -190,7 +190,7 @@
                     <button style="margin-right:10px" id="_stay" onclick="stay()">stay</button>
                     <button style="margin-left:10px" id="_hit" onclick="hit(true)">hit</button>
                 </div>
-                <div id="player_money">$100</div>
+                <p id="player_money">$100</p>
             </div>
         </div>
         <div class="banner">
