--- a/blackjack.html
+++ b/blackjack.html
@@ -80,6 +80,7 @@
             border-radius: 50%;
             background-color: aquamarine;
             width: 90px;
+            margin: 5px;
         }
         
         .clear {
