--- a/blackjack.html
+++ b/blackjack.html
@@ -375,7 +375,7 @@
         bet_amount = 0;
         bet_money.innerHTML = "$" + bet_amount;
         for (i = 0; i < 4; i++) chips[i].disabled = false;
-        for (i = 0; i < 2; i++) bet_buttons[i].disabled = false;
+        clear.disabled = false;
         start();
     }
     start();
