--- a/blackjack.html
+++ b/blackjack.html
@@ -256,7 +256,7 @@
 
     function bet(n) {
         if (n == -1) {
-            console.log("clear");
+            console.log("bet $0");
             money += bet_amount;
             bet_amount = 0;
             bet_money.innerHTML = "$" + bet_amount;
