--- a/blackjack.html
+++ b/blackjack.html
@@ -99,6 +99,7 @@
         
         #left {
             min-width: 600px;
+            width: 70%;
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
@@ -112,6 +113,7 @@
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
             min-width: 380px;
+            width: 30%;
             height: 100%;
         }
         
