--- a/blackjack.html
+++ b/blackjack.html
@@ -98,8 +98,8 @@
         }
         
         #left {
-            min-width: 600px;
-            width: 65%;
+            min-width: 65%;
+            max-width: 100%;
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
@@ -112,8 +112,8 @@
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
-            min-width: 380px;
-            width: 30%;
+            min-width: 30%;
+            max-width: 100%;
             height: 100%;
         }
         
