--- a/blackjack.html
+++ b/blackjack.html
@@ -98,7 +98,7 @@
         
         #left {
             min-width: 68.2%;
-            max-width: 100%;
+            width: 100%;
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
@@ -112,7 +112,7 @@
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
             min-width: 30%;
-            max-width: 100%;
+            width: 100%;
             height: 100%;
         }
         
