--- a/blackjack.html
+++ b/blackjack.html
@@ -97,6 +97,7 @@
         }
         
         #left {
+            min-width: 2000px;
             flex-grow: 2;
             float: left;
             border: 5px ridge black;
