--- a/blackjack.html
+++ b/blackjack.html
@@ -98,7 +98,7 @@
         }
         
         #left {
-            min-width: 1000px;
+            min-width: 49%;
             flex-grow: 2;
             float: left;
             border: 5px ridge black;
@@ -112,6 +112,7 @@
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
+            min-width: 49%;
             flex-grow: 1;
             height: 100%;
         }
