--- a/blackjack.html
+++ b/blackjack.html
@@ -99,7 +99,7 @@
         
         #left {
             min-width: 49%;
-            flex-grow: 2;
+            max-width: 100%;
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
