--- a/blackjack.html
+++ b/blackjack.html
@@ -73,7 +73,7 @@
             position: absolute;
             left: 0;
             display: inline-table;
-            justify-content: center;
+            align-content: center;
         }
         
         .chip {
