--- a/blackjack.html
+++ b/blackjack.html
@@ -55,6 +55,7 @@
             width: 1.25in;
             display: inline-table;
             margin-left: -.75in;
+            border: 2px ridge black;
         }
         
         #score {
