--- a/blackjack.html
+++ b/blackjack.html
@@ -78,7 +78,8 @@
             position: absolute;
             left: 0;
             display: inline-table;
-            align-content: stretch;
+            display: flex;
+            /*align-content: stretch;*/
         }
         
         .chip {
