--- a/blackjack.html
+++ b/blackjack.html
@@ -104,7 +104,7 @@
         }
         
         #left {
-            /*width: 500px;*/
+            width: 460px;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
             margin: auto;
@@ -114,7 +114,7 @@
             background: #c4a300;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
-            /*width: 300px;*/
+            width: 424px;
             margin: auto;
         }
         
