--- a/blackjack.html
+++ b/blackjack.html
@@ -88,7 +88,7 @@
         
         #bet {
             display: flex;
-            width: 100%;
+            width: 424px;
             position: absolute;
         }
         
