--- a/blackjack.html
+++ b/blackjack.html
@@ -194,8 +194,8 @@
                     </div>
                 </div>
                 <div id="action">
-                    <button style="margin-right:10px" id="_stay" onclick="stay()">stay</button>
-                    <button style="margin-left:10px" id="_hit" onclick="hit(true)">hit</button>
+                    <button id="_stay" onclick="stay()">stay</button>
+                    <button id="_hit" onclick="hit(true)">hit</button>
                 </div>
                 <p id="player_money">$100</p>
             </div>
