--- a/blackjack.html
+++ b/blackjack.html
@@ -98,6 +98,7 @@
         
         #bet_money {
             width: 50%;
+            height: auto;
             background-color: #c4a300;
         }
         
