--- a/blackjack.html
+++ b/blackjack.html
@@ -98,7 +98,7 @@
         
         #bet_money {
             width: 50%;
-            height: auto;
+            height: 46px;
             background-color: #c4a300;
         }
         
