--- a/blackjack.html
+++ b/blackjack.html
@@ -116,6 +116,7 @@
         #_hit {
             width: 424px;
             height: 195px;
+            opacity: .5;
         }
         
         @keyframes glowing {
