--- a/blackjack.html
+++ b/blackjack.html
@@ -89,6 +89,7 @@
         #bet {
             display: flex;
             width: 424px;
+            height: 195;
             position: absolute;
         }
         
