--- a/blackjack.html
+++ b/blackjack.html
@@ -91,6 +91,7 @@
             width: 424px;
             height: 195;
             position: absolute;
+            background-color: rgba(150, 150, 150, .5)
         }
         
         #action {
