--- a/blackjack.html
+++ b/blackjack.html
@@ -89,7 +89,7 @@
         #bet {
             display: flex;
             width: 424px;
-            height: 195;
+            height: 195px;
             position: absolute;
             background-color: rgba(150, 150, 150, .5);
         }
