--- a/blackjack.html
+++ b/blackjack.html
@@ -96,6 +96,7 @@
         
         #action {
             position: absolute;
+            width: 424px;
         }
         
         #bet_money {
