--- a/blackjack.html
+++ b/blackjack.html
@@ -112,7 +112,7 @@
         
         #right {
             width: 424px;
-            margin: auto;
+            /*margin: auto;*/
             background-color: rgba(255, 251, 0, 0.5);
         }
         
