--- a/blackjack.html
+++ b/blackjack.html
@@ -149,6 +149,11 @@
             transform: translate(-50%, 0);
         }
         
+        #title_p,
+        #title_d {
+            widows: 180px;
+        }
+        
         #again {
             position: absolute;
             transform: translate(-52%, 3.2in);
