--- a/blackjack.html
+++ b/blackjack.html
@@ -151,7 +151,7 @@
         
         #title_p,
         #title_d {
-            widows: 180px;
+            width: 180px;
         }
         
         #again {
