--- a/blackjack.html
+++ b/blackjack.html
@@ -43,10 +43,12 @@
         #player {
             position: static;
             margin: auto;
+            display: flex;
         }
         
         #dealer {
             margin: auto;
+            display: flex;
         }
         
         .hand {
