--- a/blackjack.html
+++ b/blackjack.html
@@ -156,7 +156,8 @@
         
         #title_p,
         #title_d {
-            width: 180px;
+            transform: rotate(-90deg);
+            transform-origin: right top 0;
         }
         
         #again {
