--- a/blackjack.html
+++ b/blackjack.html
@@ -157,6 +157,7 @@
         #title_p,
         #title_d {
             transform: rotate(-90deg);
+            width: auto;
         }
         
         #again {
