--- a/blackjack.html
+++ b/blackjack.html
@@ -158,6 +158,7 @@
         #title_d {
             transform: rotate(-90deg);
             width: auto;
+            height: auto;
         }
         
         #again {
