--- a/blackjack.html
+++ b/blackjack.html
@@ -156,9 +156,9 @@
         
         #title_p,
         #title_d {
-            transform: rotate(-90deg);
-            width: auto;
+            width: 400px;
             height: auto;
+            transform: rotate(-90deg);
         }
         
         #again {
