--- a/blackjack.html
+++ b/blackjack.html
@@ -157,7 +157,7 @@
         #title_p,
         #title_d {
             width: 400px;
-            height: auto;
+            height: 50px;
             transform: rotate(-90deg);
         }
         
