--- a/blackjack.html
+++ b/blackjack.html
@@ -159,6 +159,7 @@
             width: 180px;
             height: 50px;
             transform: rotate(-90deg);
+            transform-origin: left top 0;
         }
         
         #again {
