--- a/blackjack.html
+++ b/blackjack.html
@@ -159,7 +159,7 @@
             width: 200px;
             height: 50px;
             transform: rotate(-90deg);
-            transform-origin: left top 0;
+            transform-origin: right top 0;
         }
         
         #again {
