--- a/blackjack.html
+++ b/blackjack.html
@@ -161,7 +161,7 @@
             width: 165px;
             height: 50px;
             transform: rotate(-90deg);
-            transform-origin: right top 0;
+            transform-origin: right bottom;
         }
         
         #again {
