--- a/blackjack.html
+++ b/blackjack.html
@@ -163,6 +163,8 @@
             transform: rotate(-90deg);
             transform-origin: right bottom;
             align-self: flex-start;
+            background-color: #c4a300;
+            margin-left: -100px;
         }
         
         #again {
