--- a/blackjack.html
+++ b/blackjack.html
@@ -162,7 +162,7 @@
             height: 50px;
             transform: rotate(-90deg);
             transform-origin: right bottom;
-            align-self: flex-start;
+            /*align-self: flex-start;*/
             background-color: #c4a300;
             margin-left: -100px;
         }
