--- a/blackjack.html
+++ b/blackjack.html
@@ -159,7 +159,7 @@
         #title_p,
         #title_d {
             width: 165px;
-            /*height: 50px;*/
+            height: 40px;
             transform: rotate(-90deg);
             transform-origin: right bottom;
             align-self: flex-start;
