--- a/blackjack.html
+++ b/blackjack.html
@@ -164,6 +164,7 @@
             transform-origin: right bottom;
             align-self: flex-start;
             background-color: #c4a300;
+            margin-bottom: 5px;
         }
         
         #again {
