--- a/blackjack.html
+++ b/blackjack.html
@@ -161,7 +161,7 @@
             width: 165px;
             height: 40px;
             transform: rotate(-90deg);
-            transform-origin: right bottom;
+            transform-origin: right top;
             align-self: flex-start;
             background-color: #c4a300;
             margin-bottom: 5px;
