--- a/blackjack.html
+++ b/blackjack.html
@@ -165,6 +165,7 @@
             align-self: flex-start;
             background-color: #c4a300;
             margin-bottom: 5px;
+            transform: translate(100px, 0);
         }
         
         #again {
