--- a/blackjack.html
+++ b/blackjack.html
@@ -161,7 +161,7 @@
             width: 168px;
             height: 40px;
             transform: rotate(270deg);
-            transform-origin: 0 0;
+            transform-origin: right top;
             /*align-self: flex-start;*/
             background-color: #c4a300;
         }
