--- a/blackjack.html
+++ b/blackjack.html
@@ -43,6 +43,7 @@
         #player {
             margin: auto;
             display: inline-flex;
+            justify-content: left;
             height: 192px;
         }
         
