--- a/blackjack.html
+++ b/blackjack.html
@@ -43,7 +43,7 @@
         #player {
             margin: auto;
             display: inline-flex;
-            justify-content: left;
+            align-content: left;
             height: 192px;
         }
         
