--- a/blackjack.html
+++ b/blackjack.html
@@ -42,8 +42,7 @@
         
         #player {
             margin: auto;
-            display: inline-flex;
-            align-content: left;
+            display: inline;
             height: 192px;
         }
         
