--- a/blackjack.html
+++ b/blackjack.html
@@ -88,7 +88,7 @@
             margin: 5px 5px;
         }
         
-        .clear {
+        #clear {
             width: 90px;
             margin-top: 5px;
         }
@@ -205,7 +205,7 @@
             <div id="right">
                 <div id="bet">
                     <p id="bet_money">$0</p>
-                    <button class="clear" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CLR</button>
+                    <button id="clear" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CLR</button>
                     <div id="chips">
                         <button class="chip" id="c1" onclick="bet(1)">$1</button>
                         <button class="chip" id="c5" onclick="bet(5)">$5</button>
