--- a/blackjack.html
+++ b/blackjack.html
@@ -42,6 +42,7 @@
         
         #player {
             margin: auto;
+            display: flex;
             height: 192px;
         }
         
