--- a/blackjack.html
+++ b/blackjack.html
@@ -100,6 +100,7 @@
             height: 195px;
             position: absolute;
             background-color: rgba(150, 150, 150, .5);
+            border-radius: 20px;
         }
         
         #action {
