--- a/blackjack.html
+++ b/blackjack.html
@@ -162,7 +162,7 @@
             transform: rotate(270deg);
             transform-origin: right top;
             background-color: #c4a300;
-            margin-top: -100px;
+            margin-left: -100px;
         }
         
         #again {
