--- a/blackjack.html
+++ b/blackjack.html
@@ -162,7 +162,10 @@
             transform: rotate(270deg);
             transform-origin: right top;
             background-color: #c4a300;
-            margin-left: -100px;
+        }
+        
+        .titles {
+            margin-left: 100px;
         }
         
         #again {
@@ -181,7 +184,9 @@
         <div class="wrapper">
             <div id="left">
                 <div id="dealer">
-                    <p id="title_d">Dealer:</p>
+                    <div class="titles">
+                        <p id="title_d">Dealer:</p>
+                    </div>
                     <div class="hand">
                         <img id="d1" class="card" src="/img/back.png">
                         <img id="d2" class="card" src="/img/back.png">
@@ -193,7 +198,9 @@
                     </div>
                 </div>
                 <div id="player">
-                    <p id="title_p">Player:</p>
+                    <div class="titles">
+                        <p id="title_p">Player:</p>
+                    </div>
                     <div class="hand">
                         <img id="p1" class="card" src="/img/back.png">
                         <img id="p2" class="card" src="/img/back.png">
