--- a/blackjack.html
+++ b/blackjack.html
@@ -160,7 +160,7 @@
             width: 168px;
             height: 40px;
             transform: rotate(270deg);
-            transform-origin: right top;
+            transform-origin: center center;
             background-color: #c4a300;
         }
         
