--- a/blackjack.html
+++ b/blackjack.html
@@ -159,13 +159,14 @@
         #title_d {
             width: 168px;
             height: 40px;
-            transform: rotate(270deg);
-            transform-origin: center center;
+            transform: rotate(270deg) translate(-100px, 0);
+            transform-origin: top left;
             background-color: #c4a300;
         }
         
         .titles {
             margin-left: -100px;
+            margin-right: 10px;
         }
         
         #again {
