--- a/blackjack.html
+++ b/blackjack.html
@@ -159,7 +159,7 @@
         #title_d {
             width: 168px;
             height: 40px;
-            transform: rotate(270deg) translate(-100px, 0);
+            transform: rotate(270deg) translate(-100px, -200px);
             transform-origin: top left;
             background-color: #c4a300;
         }
