--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <a href="./calculator.html">calculator</a>
     <br>
     <a href="./blackjack.html">blackjack</a>
+    <br>
+    <a href="./portfolio.html">portfolio</a>
 </body>
 
 </html>
