--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="UTF-8" />
@@ -9,22 +10,26 @@
 </head>
 
 <body>
-    <div class="box1">
-        <h1>1</h1>
-    </div>
-    <div class="box2">
-        <h1>2</h1>
-    </div>
-    <div class="box3">
-        <h1>3</h1>
-    </div>
-    <div class="box4">
-        <h1>4</h1>
-    </div>
-    <div class="box5">
-        <h1>5</h1>
-    </div>
-    <div class="box6">
-        <h1>6</h1>
-    </div>
+    <main>
+        <div class="box1">
+            <h1>1</h1>
+        </div>
+        <div class="box2">
+            <h1>2</h1>
+        </div>
+        <div class="box3">
+            <h1>3</h1>
+        </div>
+        <div class="box4">
+            <h1>4</h1>
+        </div>
+        <div class="box5">
+            <h1>5</h1>
+        </div>
+        <div class="box6">
+            <h1>6</h1>
+        </div>
+    </main>
 </body>
+
+</html>
