--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-QA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./portfolio.css" />
-    <title>Grid Stuff</title>
+    <title>Grid</title>
 </head>
 
 <body>
