--- a/profile.html
+++ b/profile.html
@@ -19,6 +19,7 @@
             background: linear-gradient(to right, rgb(22, 22, 22) 40%, rgba(51, 51, 51, 0));
             position: sticky;
             top: 0;
+            box-shadow: 10px 0 10px black;
         }
         
         .topnav a {
