--- a/profile.html
+++ b/profile.html
@@ -14,6 +14,7 @@
         <a href="#about">About</a>
         <a href="#works">Works</a>
         <a href="#contact">Contact</a>
+        <button class="switch"><i class='fas fa-lightbulb' style='font-size:36px'></i></button>
     </div>
     <div class="margin">
         <div id="home"></div>
