--- a/profile.html
+++ b/profile.html
@@ -4,17 +4,17 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/9a8142199b.js"></script>
     <link rel="stylesheet" href="./profile.css" />
 </head>
 
 <body class="tinted-image">
     <div class="topnav">
-        <a class="fire" href="#home"><i class="fa fa-free-code-camp" title="home" style="font-size:28px"></i></a>
+        <a class="fire" href="#home"><i class='fab fa-free-code-camp' title="home" style="font-size:36px"></i></a>
         <a href="#about">About</a>
         <a href="#works">Works</a>
         <a href="#contact">Contact</a>
-        <button class="switch"><i class='fas fa-lightbulb' style='font-size:36px'></i></button>
+        <a class="switch"><i class='fas fa-lightbulb' style='font-size:36px'></i></a>
     </div>
     <div class="margin">
         <div id="home"></div>
