--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 
 <body id="tinted-image">
     <div class="topnav">
-        <a class="fire" href="#home"><i class='fab fa-free-code-camp' title="home" style="font-size:36px"></i></a>
+        <a class="fire" href="#home"><img href="./img/profile.jpg"></a>
         <a href="#about">About</a>
         <a href="#works">Works</a>
         <a href="#contact">Contact</a>
