--- a/profile.html
+++ b/profile.html
@@ -9,8 +9,9 @@
 </head>
 
 <body id="tinted-image">
+    <div id="top"></div>
     <div class="topnav">
-        <a class="fire" href="#home"><img href="./img/profile.jpg"></a>
+        <a id="pic" href="#top"><img src="./img/profile.jpg" height="49px" width="49px" id="picture"></a>
         <a href="#about">About</a>
         <a href="#works">Works</a>
         <a href="#contact">Contact</a>
