--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             background-size: cover;
         }
         
+        a {
+            color: black;
+            text-decoration: none;
+        }
+        
         a:visited {
             color: black;
         }
