--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
         <a href="#about">About</a>
         <a href="#works">Works</a>
         <a href="#contact">Contact</a>
-        <a id="switch"><i class='fas fa-lightbulb' style='font-size:36px'></i></a>
+        <a id="switch"><i class='far fa-lightbulb' style='font-size:36px'></i></a>
     </div>
     <div class="margin">
         <div id="home"></div>
