--- a/profile.html
+++ b/profile.html
@@ -71,6 +71,7 @@
             }
             body.style.background = "white";
             nav[0].style.background = "white";
+            nav[0].style.box-shadow = "0 0 12px #202020";
         } else {
             console.log("off");
             for (tag of all) {
@@ -80,6 +81,7 @@
             }
             body.style.background = "#202020";
             nav[0].style.background = "#202020";
+            nav[0].style.box-shadow = "0 0 12px black";
         }
         light = !light;
     }
