--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
             }
             body.style.background = "white";
             nav[0].style.background = "white";
-            nav[0].style.box-shadow = "0 0 12px #202020";
+            nav[0].style.boxShadow = "0 0 12px #202020";
         } else {
             console.log("off");
             for (tag of all) {
@@ -81,7 +81,7 @@
             }
             body.style.background = "#202020";
             nav[0].style.background = "#202020";
-            nav[0].style.box-shadow = "0 0 12px black";
+            nav[0].style.boxShadow = "0 0 12px black";
         }
         light = !light;
     }
