--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
             }
             body.style.background = "white";
             nav[0].style.background = "white";
-            nav[0].style.boxShadow = "0 0 12px #202020";
+            nav[0].style.boxShadow = "0 0 12px grey";
         } else {
             console.log("off");
             for (tag of all) {
