--- a/calculator.html
+++ b/calculator.html
@@ -43,6 +43,7 @@
         #answer {
             color: aliceblue;
             font-size: 1in;
+            margin: 20px 0 0 0;
         }
         
         #buttons {
