--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,7 @@
         body {
             background-color: #FF0051;
             background-image: linear-gradient(to bottom right, #543FB5, #FF0051);
-            height: 100%;
+            height: auto;
             margin: 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
