--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
         <a href="#contact">Contact</a>
         <a id="switch"><i class='far fa-lightbulb' style='font-size:36px'></i></a>
     </div>
-    <div class="margin">
+    <div class="content">
         <div id="home"></div>
         <h1 id="about">ABOUT</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi amet nobis repellat natus sequi sint consectetur excepturi doloribus vero provident consequuntur accusamus quisquam nesciunt cupiditate soluta
