--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             background-color: rgb(0, 0, 0);
             background-image: linear-gradient(to bottom right, #543FB5, #FF0051);
-            height: 100%;
+            height: auto;
             margin: 25%;
             font-family: 'Permanent Marker';
             font-size: 40px;
