--- a/blackjack.html
+++ b/blackjack.html
@@ -185,13 +185,13 @@
                         <p id="title_d">Dealer:</p>
                     </div>
                     <div class="hand">
-                        <img id="d1" class="card" src="/img/back.png">
-                        <img id="d2" class="card" src="/img/back.png">
-                        <img id="d3" class="card" src="/img/back.png">
-                        <img id="d4" class="card" src="/img/back.png">
-                        <img id="d5" class="card" src="/img/back.png">
-                        <img id="d6" class="card" src="/img/back.png">
-                        <img id="d7" class="card" src="/img/back.png">
+                        <img id="d1" class="card" src="./img/back.png">
+                        <img id="d2" class="card" src="./img/back.png">
+                        <img id="d3" class="card" src="./img/back.png">
+                        <img id="d4" class="card" src="./img/back.png">
+                        <img id="d5" class="card" src="./img/back.png">
+                        <img id="d6" class="card" src="./img/back.png">
+                        <img id="d7" class="card" src="./img/back.png">
                     </div>
                 </div>
                 <div id="player">
@@ -199,13 +199,13 @@
                         <p id="title_p">Player:</p>
                     </div>
                     <div class="hand">
-                        <img id="p1" class="card" src="/img/back.png">
-                        <img id="p2" class="card" src="/img/back.png">
-                        <img id="p3" class="card" src="/img/back.png">
-                        <img id="p4" class="card" src="/img/back.png">
-                        <img id="p5" class="card" src="/img/back.png">
-                        <img id="p6" class="card" src="/img/back.png">
-                        <img id="p7" class="card" src="/img/back.png">
+                        <img id="p1" class="card" src="./img/back.png">
+                        <img id="p2" class="card" src="./img/back.png">
+                        <img id="p3" class="card" src="./img/back.png">
+                        <img id="p4" class="card" src="./img/back.png">
+                        <img id="p5" class="card" src="./img/back.png">
+                        <img id="p6" class="card" src="./img/back.png">
+                        <img id="p7" class="card" src="./img/back.png">
                     </div>
                 </div>
             </div>
